tests/__snapshots__/validation-fileExtensions-wrong-list-item-type-stderr.snap.txt
Error: Item of the 'fileExtensions' list must be of type string.

  2 |   "fileExtensions": [
  3 |     "json",
> 4 |     true
    |     ^
  5 |   ]
  6 | }

      at ./tstyche.config.json:4:5

